--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -149,6 +149,8 @@ install: all
 	rm -f $(DESTDIR)/sbin/burp ; \
 	rm -f $(DESTDIR)/usr/sbin/burp ; \
 	$(LIBTOOL_INSTALL) $(INSTALL_PROGRAM) burp $(DESTDIR)$(sbindir)/burp 
+	$(LIBTOOL_INSTALL) $(INSTALL_PROGRAM) legacy/server/vss_strip $(DESTDIR)$(sbindir)/vss_strip
+# Should do a static vss_strip too.
 	@if test -f static-burp; then \
 	   $(LIBTOOL_INSTALL) $(INSTALL_PROGRAM) static-burp $(DESTDIR)$(sbindir)/static-burp; \
 	fi
