Make the tests run for both burp2 and burp1, and tidy them a lot.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -5,6 +5,9 @@ port = 4971
 server = 127.0.0.1
 password = abcdefgh
 cname = testclient
+# Choose the protocol to use.
+# 0 to decide automatically, 1 to force burp1 mode, 2 to force burp2 mode.
+# protocol = 0
 pidfile = /var/run/burp.client.pid
 syslog = 0
 stdout = 1
