--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -6,6 +6,11 @@ status_port = 4972
 directory = /var/spool/burp
 dedup_group = global
 clientconfdir = /etc/burp/clientconfdir
+# Choose the protocol to use.
+# 0 to decide automatically, 1 to force burp1 mode, 2 to force burp2 mode.
+# Like many other settings, this can be set per client in the clientconfdir
+# files.
+# protocol = 0
 pidfile = /var/run/burp.server.pid
 hardlinked_archive = 0
 working_dir_recovery_method = delete
