Add ability to turn SSL compression off.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -59,6 +59,9 @@ ssl_key = /etc/burp/ssl_cert-client.key
 # Client SSL ciphers
 #ssl_ciphers = 
 
+# Client SSL compression. Default is zlib5. Set to zlib0 to turn it off.
+#ssl_compression = zlib5
+
 # SSL key password
 ssl_key_password = password
 
