--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -33,6 +33,9 @@ client_can_verify = 1
 # Network timeout defaults to 7200 seconds (2 hours).
 # network_timeout = 7200
 
+# Server storage compression. Default is zlib9. Set to zlib0 to turn it off.
+#compression = zlib9
+
 # When the client version does not match the server version, log a warning.
 # Set to 0 to turn it off.
 version_warn = 1
@@ -78,6 +81,9 @@ ssl_key = /etc/burp/ssl_cert-server.key
 
 # Server SSL ciphers
 #ssl_ciphers = 
+
+# Server SSL compression. Default is zlib5. Set to zlib0 to turn it off.
+#ssl_compression = zlib5
 
 # SSL key password
 ssl_key_password = password
