--- a/configure.ac
+++ b/configure.ac
@@ -1580,6 +1580,7 @@ AC_OUTPUT([autoconf/Make.common \
 	   src/burp1/server/Makefile \
 	   src/burp2/client/Makefile \
 	   src/burp2/server/Makefile \
+	   src/burp2/server/champ_chooser/Makefile \
 	   src/burp2/Makefile \
 	   $PFILES ],  
      [ ]
