Add 'atime' option for turning O_NOATIME on and off.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -109,3 +109,6 @@ nobackup = .nobackup
 # Exclude files from compression by extension.
 exclude_comp=bz2
 exclude_comp=gz
+# When backing up, whether to enable O_NOATIME when opening files and
+# directories. The default is atime=0, which enables O_NOATIME.
+#atime=1
