--- a/Makefile.in
+++ b/Makefile.in
@@ -21,6 +21,7 @@ bin_subdirs = src/burp2/rabin \
 		src/burp2/client \
 		src/burp2/server \
 		src/burp2/server/champ_chooser \
+		src/burp2/server/monitor \
 		src/burp2 \
 		src
 
