--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -44,12 +44,13 @@ SRCS = \
 		run_script.c \
 		sbuf.c \
 		ssl.c \
-		strlist.c \
+		strlist.c
 
 OBJS = $(SRCS:.c=.o)
 SUBDIROBJS = \
 		burp2/server/server_burp2.a \
 		burp2/server/champ_chooser/champ_chooser.a \
+		burp2/server/monitor/monitor.a \
 		burp2/client/client_burp2.a \
 		burp2/rabin/rabin.a \
 		burp1/client/client_burp1.a \
