--- a/src/burp2/server/monitor/Makefile.in
+++ b/src/burp2/server/monitor/Makefile.in
@@ -7,9 +7,9 @@ VPATH = 	.
 # one up
 basedir = ..
 # top dir
-topdir = ../../..
+topdir = ../../../..
 # this dir relative to top dir
-thisdir = src/burp2/server
+thisdir = src/burp2/server/monitor
 
 DEBUG=@DEBUG@
 
@@ -20,25 +20,8 @@ dummy:
 
 #
 SRCS = \
-	auth.o \
-	autoupgrade.o \
-	backup.o \
-	backup_phase1.o \
-	backup_phase2.o \
-	backup_phase3.o \
-	ca.o \
-	child.o \
-	chlds.o \
-	current_backups.o \
-	delete.o \
-	dpth.o \
-	extra_comms.o \
-	list.o \
-	main.o \
-	manio.o \
-	restore.o \
-	run_action.o \
-	sdirs.o
+	status_client_ncurses.o \
+	status_server.o \
 
 OBJS = $(SRCS:.c=.o)
 LOBJS = $(SRCS:.c=.lo)
@@ -66,11 +49,11 @@ WIN32LIBS = $(@WIN32@)
 #	@echo "Compiling $<"
 	$(ECHO_CMD)$(LIBTOOL_COMPILE) $(CXX) $(DEFS) $(DEBUG) -c $(WCFLAGS) $(CPPFLAGS) -I$(srcdir) -I$(basedir) $(DINCLUDE) $(CFLAGS) $<
 #-------------------------------------------------------------------------
-all: Makefile server_burp2.a
-	@echo "==== Make of server_burp2.a is good ===="
+all: Makefile monitor.a
+	@echo "==== Make of monitor.a is good ===="
 	@echo " "
 
-server_burp2.a: $(OBJS)
+monitor.a: $(OBJS)
 	@echo "Making $@ ..."
 	$(AR) rc  $@ $(OBJS)
 	$(RANLIB) $@
