--- a/src/server/burp1/Makefile.in
+++ b/src/server/burp1/Makefile.in
@@ -20,6 +20,7 @@ dummy:
 
 #
 SRCS = \
+	backup.c \
 	backup_phase2.c \
 	backup_phase3.c \
 	backup_phase4.c \
@@ -28,7 +29,7 @@ SRCS = \
 	fdirs.c \
 	restore.c \
 	resume.c \
-	run_action.c \
+	rubble.c \
 	zlibio.c \
 
 OBJS = $(SRCS:.c=.o)
