--- a/website/content/main.template
+++ b/website/content/main.template
@@ -5,9 +5,9 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <STYLE type="text/css">
 <!--
-A { text-decoration:none;
-color:#AA99BB;
-background-color:black;}
+#mainlink { text-decoration:none;
+color:#000000;
+background-color:white;}
 P { text-align:justify;}
 -->
 </STYLE>
@@ -15,93 +15,110 @@ P { text-align:justify;}
 BURP - BackUp and Restore Program
 </TITLE>
 </HEAD>
-<BODY BACKGROUND="/images/background.jpg" BGCOLOR="black">
-<!-- BODY BGCOLOR="black" -->
+<BODY BACKGROUND="/images/background.jpg" BGCOLOR="white">
 
 <TABLE WIDTH="100%" BORDER=0>
-<TR>
-<TD WIDTH="10%"></TD>
-<TD ALIGN="CENTER" WIDTH="80%">
-<TABLE BORDER=0 BGCOLOR="black">
-<TR><TD ALIGN="CENTER" WIDTH="100%"><BR>
-<A HREF="/">
-<IMG BORDER=0 SRC="/images/logo.jpg" ALT="BURP - BackUp and Restore Program">
-</A>
+ <TR>
+  <TD WIDTH="10%"></TD>
+  <TD ALIGN="CENTER" WIDTH="80%">
+   <TABLE BORDER=1 BGCOLOR="white">
+    <TR>
+     <TD ALIGN="CENTER" WIDTH="100%">
+      <BR>
+      <A HREF="/">
+       <IMG BORDER=0 SRC="/images/logo.jpg" ALT="BURP - BackUp and Restore Program">
+      </A>
 
-<HR>
-<TABLE BORDER=0 WIDTH="100%" CELLSPACING=0 CELLPADDING=0>
-<TR>
-@index@index@about
-@why@why@why
-@faq@faq@faq
-@howto@howto@howto
-@wiki@wiki@wiki
-@download@download@download
-@contact@contact@contact
-</TR>
-</TABLE>
-<HR>
-
-<BR><BR>
 <!-- @header -->
-<!-- FONT COLOR="#FF9999" -->
+
+      <TABLE BORDER=0>
+       <TR>
+        <TD WIDTH="12%" VALIGN="top">
+         <p>
+          <TABLE BORDER=0 WIDTH="10%" CELLSPACING=0 CELLPADDING=0>
+@index@ABOUT@about
+@news@NEWS@news
+@why@WHY@why
+@faq@FAQ@faq
+@docs@DOCS@docs
+@burpui@BURP-UI@burpui
+@burp2@BURP2@burp2
+@download@DOWNLOAD@download
+@licence@LICENCE@licence
+@donations@DONATIONS@donations
+@sponsors@SPONSORS@sponsors
+@contact@CONTACT@contact
+          </TABLE>
+         </p>
+        </TD>
+        <TD WIDTH="60%">
+         <table>
+          <tr>
+           <td align="left">
 @content
-<!-- /FONT -->
+           </td>
+          </tr>
+         </table>
+        </TD>
+        <TD WIDTH="8%"></TD>
+       </TR>
+      </TABLE>
 
-<table width="100%">
-<tr>
-<td width="10%"></td>
-<td align="center" width="30%">
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="XC8N3XB7T6UFQ">
-<input type="image" src="http://burp.grke.org/images/paypal.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online.">
-<img alt="" border="0" src="https://www.paypal.com/en_GB/i/scr/pixel.gif" width="1" height="1">
-</form>
-<br>
-<script id='fbrv8cz'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//api.flattr.com/button/view/?uid=grke.net&button=compact&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('fbrv8cz');</script>
-
-</td>
-<td align="centre" width="50%">
-<p>
-<font color="#99ccff">
+      <table width="100%">
+       <tr>
+        <td width="10%"></td>
+        <td align="center" width="30%">
+         <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+          <input type="hidden" name="cmd" value="_s-xclick">
+          <input type="hidden" name="hosted_button_id" value="XC8N3XB7T6UFQ">
+          <input type="image" src="http://burp.grke.org/images/paypal.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online.">
+          <img alt="" border="0" src="https://www.paypal.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+         </form>
+         <br>
+         <script id='fbrv8cz'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//api.flattr.com/button/view/?uid=grke.net&button=compact&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('fbrv8cz');</script>
+        </td>
+        <td align="centre" width="50%">
+         <p>
+          <font color="#000000">
 Burp is open and free software. I work on it in my spare time.
 If you would like this work to continue, please consider making a small
 donation.
-</font>
-<br>
-<br>
-<font color="#ffffff">
-bitcoin:1PFtePS2YE5i5dTX17ozJPHrjKu2UqBLmi
-</font>
-</p>
-</td>
-<td width="10%">
-</td>
-</tr>
-</table>
+          </font>
+          <br>
+          <br>
+          <font color="#000000">
+           bitcoin:1PFtePS2YE5i5dTX17ozJPHrjKu2UqBLmi
+          </font>
+         </p>
+        </td>
+        <td width="10%">
+        </td>
+       </tr>
+      </table>
 
-<BR>
-</TD>
-</TR>
+      <BR>
+     </TD>
+    </TR>
+   </TABLE>
+  <TD WIDTH="10%"></TD>
+ </TR>
 
-</TABLE>
-<TD WIDTH="10%"></TD>
-</TR>
-
-<table width="100%"><tr>
-<td align="left">
-<font color="#99ccff">
-Burp, don't suck.
-</font>
-</td>
-<td align="right">
-<font color="#99ccff">
-Last updated: June 2014
-<BR>
-<a href="http://6sync.com">Hosted by 6sync</a>
-</font>
-</td></tr></table>
+ <table width="100%">
+  <tr>
+   <td align="left">
+    <font color="#000000">
+     Burp, don't suck.
+    </font>
+   </td>
+   <td align="right">
+    <font color="#000000">
+     Last updated: June 2014
+     <BR>
+     <a href="http://6sync.com">Hosted by 6sync</a>
+    </font>
+   </td>
+  </tr>
+ </table>
 
 </TABLE>
 
