--- a/website/content/main.template
+++ b/website/content/main.template
@@ -37,6 +37,7 @@ BURP - BackUp and Restore Program
          <p>
           <TABLE BORDER=0 WIDTH="10%" CELLSPACING=0 CELLPADDING=0>
 @index@ABOUT@about
+@features@FEATURES@features
 @news@NEWS@news
 @why@WHY@why
 @faq@FAQ@faq
