--- a/src/win32/burp/Makefile
+++ b/src/win32/burp/Makefile
@@ -41,7 +41,6 @@ CLIENT_OBJS = \
 	$(OBJDIR)/burp1/sbufl.o \
 	$(OBJDIR)/burp2/blist.o \
 	$(OBJDIR)/burp2/blk.o \
-	$(OBJDIR)/burp2/hexmap.o \
 	$(OBJDIR)/burp2/rabin/rabin.o \
 	$(OBJDIR)/burp2/rabin/rconf.o \
 	$(OBJDIR)/burp2/rabin/win.o \
@@ -73,6 +72,7 @@ CLIENT_OBJS = \
 	$(OBJDIR)/forkchild.o \
 	$(OBJDIR)/fsops.o \
 	$(OBJDIR)/handy.o \
+	$(OBJDIR)/hexmap.o \
 	$(OBJDIR)/incexc_recv.o \
 	$(OBJDIR)/incexc_send.o \
 	$(OBJDIR)/iobuf.o \
