--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -161,9 +161,11 @@ devclean: realclean
 
 install: all
 	rm -f $(DESTDIR)/sbin/burp ; \
+	rm -f $(DESTDIR)/usr/sbin/bedup ; \
 	rm -f $(DESTDIR)/usr/sbin/burp ; \
 	$(LIBTOOL_INSTALL) $(INSTALL_PROGRAM) burp $(DESTDIR)$(sbindir)/burp 
 	$(LIBTOOL_INSTALL) $(INSTALL_PROGRAM) server/burp1/vss_strip $(DESTDIR)$(sbindir)/vss_strip
+	ln -sfT burp $(DESTDIR)$(sbindir)/bedup
 # Should do a static vss_strip too.
 	@if test -f static-burp; then \
 	   $(LIBTOOL_INSTALL) $(INSTALL_PROGRAM) static-burp $(DESTDIR)$(sbindir)/static-burp; \
