--- a/src/win32/burp/Makefile
+++ b/src/win32/burp/Makefile
@@ -58,6 +58,7 @@ CLIENT_OBJS = \
 	$(OBJDIR)/client/ca.o \
 	$(OBJDIR)/client/cvss.o \
 	$(OBJDIR)/client/delete.o \
+	$(OBJDIR)/client/diff.o \
 	$(OBJDIR)/client/extra_comms.o \
 	$(OBJDIR)/client/extrameta.o \
 	$(OBJDIR)/client/find.o \
