Finally get the server doing sensible things with the IPv4/6 listen addresses.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -1,8 +1,17 @@
 # This is an example config file for the burp server.
 
 mode = server
+
+# The default addresses to listen on depend upon compile time options.
+# They may be overridden here.
+#address = 0.0.0.0
 port = 4971
+# Think carefully before changing the status port address, as it can be used
+# to view the contents of backups.
+#status_address = 127.0.0.1
+# If you do not wish to run a status server at all, comment status_port out.
 status_port = 4972
+
 directory = /var/spool/burp
 dedup_group = global
 clientconfdir = /etc/burp/clientconfdir
