--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -21,6 +21,9 @@ progress_counter = 1
 # autoupgrade_dir=/etc/burp/autoupgrade/client
 # OS path component for the autoupgrade directory on the server.
 # autoupgrade_os=test_os
+# Wait a random number of seconds between 0 and the given number before
+# contacting the server on a timed backup.
+# randomise = 1200
 
 # Set server_can_restore to 0 if you do not want the server to be able to
 # initiate a restore.
