--- a/configs/client/cron.example
+++ b/configs/client/cron.example
@@ -1,5 +1,5 @@
-# Run the burp client every 20 minutes with the 'timed' option. The burp server
-# will decide whether it is yet time to do a backup or not.
-# It might be a good idea to change the numbers below for different clients,
-# in order to spread the load a bit.
-7,27,47 * * * *	root	/usr/sbin/burp -a t >>/var/log/burp-client 2>&1
+# Run the burp client every 20 minutes with the 'timed' option.
+# Sleep a random number of seconds from 0 to 1200 (20 minutes) before
+# contacting the server.
+# The burp server will decide whether it is yet time to do a backup or not.
+0,20,40 * * * *	root	/usr/sbin/burp -a t -q 1200 >>/var/log/burp-client 2>&1
