Kern Sibbald pointed out that I shouldn't have removed the copyright headers from the source that I have taken from bacula. So, I have put them back in the relevant places and updated the LICENSE file. Apologies to Kern and thanks for being a nice guy about it.

--- a/src/win32/libwin32/burp.rc
+++ b/src/win32/libwin32/burp.rc
@@ -68,7 +68,7 @@ BEGIN
             VALUE "FileVersion", VERSION "\0"
             VALUE "InternalName", "Burp\0"
             VALUE "LegalCopyright", "Copyright Free Software Foundation Europe e.V., 1999-2009\0"
-            VALUE "LegalTrademarks", "Licensed under GNU GPL 2.0\0"
+            VALUE "LegalTrademarks", "Licensed under GNU AGPLv3\0"
             VALUE "OriginalFilename", "burp.exe\0"
             VALUE "PrivateBuild", "\0"
             VALUE "ProductName", "Burp - Win32 Version\0"
