Start using yaml for JSON parsing.

--- a/autoconf/Make.common.in
+++ b/autoconf/Make.common.in
@@ -97,6 +97,7 @@ CRYPT_LIBS = @CRYPT_LIBS@
 ZLIBS = @ZLIBS@
 BDB_CPPFLAGS = @BDB_CPPFLAGS@
 BDB_LIBS = @BDB_LIBS@
+YAJL_LIBS = @YAJL_LIBS@
 
 
 # Windows (cygwin) flags 
