--- a/config.h.in
+++ b/config.h.in
@@ -318,6 +318,9 @@
 /* Define to 1 if you have the <ncurses.h> header file. */
 #undef HAVE_NCURSES_H
 
+/* Defined to 1 if libyajl was found */
+#undef HAVE_YAJL
+
 /* Define to 1 if you have the <ndir.h> header file, and it defines `DIR'. */
 #undef HAVE_NDIR_H
 
