--- a/src/server/monitor/Makefile.in
+++ b/src/server/monitor/Makefile.in
@@ -14,6 +14,7 @@ thisdir = src/server/monitor
 #
 SRCS = \
 	cstat.o \
+	json_input.o \
 	json_output.o \
 	status_client_ncurses.o \
 	status_server.o \
