Make client json list use yajl. Get it working for windows too.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -45,7 +45,8 @@ SRCS = \
 		run_script.c \
 		sbuf.c \
 		ssl.c \
-		strlist.c
+		strlist.c \
+		yajl_gen_w.c
 
 OBJS = $(SRCS:.c=.o)
 # FIX THIS: Should not need to add extra .o objects here.
