Slight rearrangement of bu.c.

--- a/src/win32/burp/Makefile
+++ b/src/win32/burp/Makefile
@@ -34,6 +34,7 @@ CLIENT_OBJS = \
 	$(OBJDIR)/base64.o \
 	$(OBJDIR)/berrno.o \
 	$(OBJDIR)/bfile.o \
+	$(OBJDIR)/bu.o \
 	$(OBJDIR)/burp1/handy.o \
 	$(OBJDIR)/burp1/msg.o \
 	$(OBJDIR)/burp1/rs_buf.o \
