--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -68,6 +68,7 @@ SUBDIROBJS = \
 		server/burp1/server_burp1.a \
 		server/burp2/server_burp2.a \
 		server/burp2/champ_chooser/champ_chooser.a \
+		client/monitor/client_monitor.a \
 		server/monitor/server_monitor.a \
 		yajl/yajl.a
 
