Make restore_clients override client_can_restore/list/verify/delete settings.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -14,6 +14,8 @@ umask = 0022
 syslog = 1
 stdout = 0
 # The following options can restrict what the client can do.
+# Note that restore_clients will still be able to do all of these operations,
+# except for force_backup.
 client_can_delete = 1
 # Set client_can_force_backup to 0 to only allow timed backups.
 client_can_force_backup = 1
