--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -29,6 +29,7 @@ umask = 0022
 syslog = 1
 stdout = 0
 # The following options can restrict what the client can do.
+# Restore clients can override all of these expect for force_backup.
 client_can_delete = 1
 # Set client_can_force_backup to 0 to only allow timed backups.
 client_can_force_backup = 1
