Adjust the default config and manpage for the manifest cached option.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -161,3 +161,7 @@ timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 # individual original clients in the individual clientconfdir files.
 # restore_client = someclient
 # restore_client = someotherclient
+
+# Whether or not the server process should cache the tree when a monitor client
+# is browsing a backup. Advantage: speed. Disadvantage: more memory is used.
+#monitor_browse_cache = 1
