Make the timestamp_format option only change the backup path, not the contents of the timestamp files.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -165,3 +165,5 @@ timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 # Whether or not the server process should cache the tree when a monitor client
 # is browsing a backup. Advantage: speed. Disadvantage: more memory is used.
 #monitor_browse_cache = 1
+
+timestamp_format=%Y_%m_%d %H-%M-%S
