--- a/configure.ac
+++ b/configure.ac
@@ -1083,6 +1083,7 @@ AC_CHECK_FUNCS( \
 AC_CHECK_FUNCS(lockf, [AC_DEFINE(HAVE_LOCKF)])
 AC_CHECK_FUNCS(fchdir, [AC_DEFINE(HAVE_FCHDIR)])
 AC_CHECK_FUNCS(strtoll, [AC_DEFINE(HAVE_STRTOLL)])
+AC_CHECK_FUNCS(lutimes, [AC_DEFINE(HAVE_LUTIMES)])
 AC_CHECK_FUNCS(posix_fadvise)
 AC_CHECK_FUNCS(fdatasync)
 
