Add tests for cmd.c.

--- a/utest/Makefile
+++ b/utest/Makefile
@@ -1,6 +1,14 @@
-test:
-	gcc  -o pathcmp.test test_pathcmp.c ../src/pathcmp.c -lcheck -lpthread -lm -lrt
-	./pathcmp.test && rm pathcmp.test
+LIBS = -lcheck -lpthread -lm -lrt
+
+test: test_cmd test_pathcmp
+
+test_cmd:
+	$(CC) -o $@.test test_cmd.c ../src/cmd.c $(LIBS)
+	./$@.test && rm $@.test
+
+test_pathcmp:
+	$(CC) -o $@.test test_pathcmp.c ../src/pathcmp.c $(LIBS)
+	./$@.test && rm $@.test
 
 clean:
 	rm *.test
