--- a/autoconf/Make.common.in
+++ b/autoconf/Make.common.in
@@ -29,8 +29,7 @@ sbindir = @sbindir@
 libdir = @libdir@
 includedir = @includedir@
 sysconfdir = @sysconfdir@
-plugindir = @plugindir@
-scriptdir = @scriptdir@
+scriptdir = @datarootdir@/burp/scripts
 archivedir = @archivedir@
 mandir = @mandir@
 manext = 8
@@ -88,8 +87,6 @@ WRAPLIBS = @WRAPLIBS@
 DINCLUDE = @DINCLUDE@
 DLIB = @DLIB@
 DB_LIBS = @DB_LIBS@
-PYTHON_LIBS = @PYTHON_LIBS@
-PYTHON_INC = @PYTHON_INCDIR@
 OPENSSL_LIBS = @OPENSSL_LIBS@
 RSYNC_LIBS = @RSYNC_LIBS@
 NCURSES_LIBS = @NCURSES_LIBS@
