--- a/configs/certs/CA/CA.cnf
+++ b/configs/certs/CA/CA.cnf
@@ -1,7 +1,7 @@
 # simple config for burp_ca
 
 RANDFILE                = /dev/urandom
-CA_DIR                  = /etc/burp/CA
+CA_DIR                  = @sysconfdir@/CA
 
 
 [ ca ]
