--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -19,7 +19,7 @@ progress_counter = 1
 # network_timeout = 7200
 # The directory to which autoupgrade files will be downloaded.
 # To never autoupgrade, leave it commented out.
-# autoupgrade_dir=/etc/burp/autoupgrade/client
+# autoupgrade_dir=@sysconfdir@/autoupgrade/client
 # OS path component for the autoupgrade directory on the server.
 # autoupgrade_os=test_os
 # Wait a random number of seconds between 0 and the given number before
@@ -48,17 +48,17 @@ cross_all_filesystems=0
 
 # Uncomment the following lines to automatically generate a certificate signing
 # request and send it to the server.
-ca_burp_ca = /usr/sbin/burp_ca
-ca_csr_dir = /etc/burp/CA-client
+ca_burp_ca = @sbindir@/burp_ca
+ca_csr_dir = @sysconfdir@/CA-client
 
 # SSL certificate authority - same file on both server and client
-ssl_cert_ca = /etc/burp/ssl_cert_ca.pem
+ssl_cert_ca = @sysconfdir@/ssl_cert_ca.pem
 
 # Client SSL certificate
-ssl_cert = /etc/burp/ssl_cert-client.pem
+ssl_cert = @sysconfdir@/ssl_cert-client.pem
 
 # Client SSL key
-ssl_key = /etc/burp/ssl_cert-client.key
+ssl_key = @sysconfdir@/ssl_cert-client.key
 
 # Client SSL ciphers
 #ssl_ciphers = 
