--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -14,7 +14,7 @@ status_port = 4972
 
 directory = /var/spool/burp
 dedup_group = global
-clientconfdir = /etc/burp/clientconfdir
+clientconfdir = @sysconfdir@/clientconfdir
 # Choose the protocol to use.
 # 0 to decide automatically, 1 to force burp1 mode, 2 to force burp2 mode.
 # Like many other settings, this can be set per client in the clientconfdir
@@ -56,7 +56,7 @@ version_warn = 1
 
 # Location of autoupgrade files to serve to clients. Leave it commented out
 # to not autoupgrade clients.
-# autoupgrade_dir = /etc/burp/autoupgrade/server
+# autoupgrade_dir = @sysconfdir@/autoupgrade/server
 
 # You can have as many 'keep' lines as you like.
 # For example, if running backups daily, setting 7, 4, 6 will keep
@@ -75,19 +75,19 @@ keep = 7
 # ca_conf does not exist, the server will create, populate it, and the paths
 # indicated by ssl_cert_ca, ssl_cert, ssl_key and ssl_dhfile below will be
 # overwritten. See docs/burp_ca.txt for more information.
-ca_conf = /etc/burp/CA.cnf
+ca_conf = @sysconfdir@/CA.cnf
 ca_name = burpCA
 ca_server_name = burpserver
-ca_burp_ca = /usr/sbin/burp_ca
+ca_burp_ca = @sbindir@/burp_ca
 
 # SSL certificate authority - same file on both server and client
-ssl_cert_ca = /etc/burp/ssl_cert_ca.pem
+ssl_cert_ca = @sysconfdir@/ssl_cert_ca.pem
 
 # Server SSL certificate
-ssl_cert = /etc/burp/ssl_cert-server.pem
+ssl_cert = @sysconfdir@/ssl_cert-server.pem
 
 # Server SSL key
-ssl_key = /etc/burp/ssl_cert-server.key
+ssl_key = @sysconfdir@/ssl_cert-server.key
 
 # Server SSL ciphers
 #ssl_ciphers = 
@@ -99,9 +99,9 @@ ssl_key = /etc/burp/ssl_cert-server.key
 ssl_key_password = password
 
 # Server DH file.
-ssl_dhfile = /etc/burp/dhfile.pem
+ssl_dhfile = @sysconfdir@/dhfile.pem
 
-timer_script = /etc/burp/timer_script
+timer_script = @scriptdir@/timer_script
 # Ensure that 20 hours elapse between backups
 # Available units:
 # s (seconds), m (minutes), h (hours), d (days), w (weeks), n (months)
@@ -119,7 +119,7 @@ timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 # %b - "backup"/"restore"/"verify"
 # %c - client name
 # %w - number of warnings, if any
-#notify_success_script = /etc/burp/notify_script
+#notify_success_script = @scriptdir@/notify_script
 #notify_success_arg = sendmail -t
 #notify_success_arg = To: youremail@example.com
 #notify_success_arg = From: burp
@@ -132,7 +132,7 @@ timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 #notify_success_changes_only = 1
 
 # Uncomment the following for email notifications of backups that failed.
-#notify_failure_script = /etc/burp/notify_script
+#notify_failure_script = @scriptdir@/notify_script
 #notify_failure_arg = sendmail -t
 #notify_failure_arg = To: youremail@example.com
 #notify_failure_arg = From: burp
@@ -140,10 +140,10 @@ timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 
 # The server can run scripts on each connection after authentication and before
 # disconnecting.
-#server_script_pre = /etc/burp/ssl_extra_checks_script
-#server_script_pre_arg = /etc/burp/crl
-#server_script_pre_arg = /etc/burp/burp-server.conf
-#server_script_pre_arg = /etc/burp/server-pre-script.local
+#server_script_pre = @scriptdir@/ssl_extra_checks_script
+#server_script_pre_arg = @sysconfdir@/crl
+#server_script_pre_arg = @sysconfdir@/burp-server.conf
+#server_script_pre_arg = @scriptdir@/server-pre-script.local
 # Set server_script_pre_notify to 1 to have notifications on server_script_pre
 # returning non-zero. Most people will want to leave this off - it could
 # result in a lot of emails because clients normally connect once every 20
