Add unit tests for hexmap.c.

--- a/utest/Makefile
+++ b/utest/Makefile
@@ -1,8 +1,10 @@
-LIBS = -lcheck -lpthread -lm -lrt
+# FIX THIS: This file should be a Makefile.in, and LIBS should be generated.
+LIBS = -lcheck -lpthread -lm -lrt -lssl
 
 SRCS = \
 	test_base64.c \
 	test_cmd.c \
+	test_hexmap.c \
 	test_pathcmp.c
 
 PROGS = clean $(SRCS:.c=.test)
