--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -20,7 +20,7 @@ clientconfdir = @sysconfdir@/clientconfdir
 # Like many other settings, this can be set per client in the clientconfdir
 # files.
 # protocol = 0
-pidfile = /var/run/burp.server.pid
+pidfile = @runstatedir@/burp.server.pid
 hardlinked_archive = 0
 working_dir_recovery_method = delete
 max_children = 5
