--- a/autoconf/Make.common.in
+++ b/autoconf/Make.common.in
@@ -31,6 +31,7 @@ includedir = @includedir@
 sysconfdir = @sysconfdir@
 scriptdir = @datarootdir@/burp/scripts
 archivedir = @archivedir@
+runstatedir = @localstatedir@/run
 mandir = @mandir@
 manext = 8
 
