--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -9,7 +9,7 @@ cname = testclient
 # Choose the protocol to use.
 # 0 to decide automatically, 1 to force burp1 mode, 2 to force burp2 mode.
 # protocol = 0
-pidfile = /var/run/burp.client.pid
+pidfile = @runstatedir@/burp.client.pid
 syslog = 0
 stdout = 1
 progress_counter = 1
