Move linkhash.[ch] to top level so it can be reused in the server.

--- a/src/win32/burp/Makefile
+++ b/src/win32/burp/Makefile
@@ -79,6 +79,7 @@ CLIENT_OBJS = \
 	$(OBJDIR)/incexc_recv.o \
 	$(OBJDIR)/incexc_send.o \
 	$(OBJDIR)/iobuf.o \
+	$(OBJDIR)/linkhash.o \
 	$(OBJDIR)/lock.o \
 	$(OBJDIR)/log.o \
 	$(OBJDIR)/main.o \
