Cleanup some server restore code.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -48,6 +48,7 @@ SRCS = \
 		regexp.c \
 		run_script.c \
 		sbuf.c \
+		slist.c \
 		ssl.c \
 		strlist.c \
 		yajl_gen_w.c
@@ -57,7 +58,6 @@ OBJS = $(SRCS:.c=.o)
 SUBDIROBJS = \
 		burp1/handy.o \
 		burp1/msg.o \
-		burp2/slist.o \
 		server/burp1/restore.o \
 		server/backup_phase1.o \
 		server/server.a \
